--- a/AppBlog/templates/AppBlog/Base.html
+++ b/AppBlog/templates/AppBlog/Base.html
@@ -14,15 +14,15 @@
     </title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'AppBlog/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="{% static 'css/carousel.css' %}" rel="stylesheet">
+    <link href="{% static 'AppBlog/css/carousel.css' %}" rel="stylesheet">
   </head>
   <body>
 
     <header>
-	{% include "AppCore/BarraNavegacion.html" %}
+	{% include "AppBlog/BarraNavegacion.html" %}
     </header>
 
     <main role="main">
