--- a/AppCore/templates/AppCore/About.html
+++ b/AppCore/templates/AppCore/About.html
@@ -6,8 +6,34 @@ ABOUT
 
 
 {% block contenido %}
-
-	<h2>Acerca de</h2>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<div class="container marketing">
 	
-	<p>Me llamo Sergio Lopez</p>
+		<hr class="featurette-divider">
+		<div class="row featurette">
+		  <div class="col-md-7">
+		    <h2 class="featurette-heading"><span class="text-muted">ISRAEL ARNEDO</span></h2>
+		    <p class="lead">CV</p>
+		  </div>
+		</div>
+		
+		<hr class="featurette-divider">
+		<div class="row featurette">
+		  <div class="col-md-7">
+		    <h2 class="featurette-heading"><span class="text-muted">JON MIKEL</span></h2>
+		    <p class="lead">CV</p>
+		  </div>
+		</div>
+
+
+		<hr class="featurette-divider">
+		<div class="row featurette">
+		  <div class="col-md-7">
+		    <h2 class="featurette-heading"><span class="text-muted">SERGIO LÓPEZ</span></h2>
+		    <p class="lead">CV</p>
+		  </div>
+		</div>
+		
+	<hr class="featurette-divider">	
+	</div>
 {% endblock %}
