--- a/AppCore/templates/AppCore/Portfolio.html
+++ b/AppCore/templates/AppCore/Portfolio.html
@@ -7,8 +7,26 @@ PORTFOLIO
 
 {% block contenido %}
 
-	<h2>Portafolio</h2>
+	<div class="container marketing">
+	<hr class="featurette-divider">
+	<div class="row featurette">
+	  <div class="col-md-7">
+	    <h2 class="featurette-heading"><span class="text-muted">TITULO 1 PORTFOLIO</span></h2>
+	    <p class="lead">CONTENIDO 1 PORTOFOLIO</p>
+	    </span>
+	  </div>
+	</div>
+	</div>
 	
-	<p>Algunos de mis trabajos</p>
-
+	<div class="container marketing">
+	<hr class="featurette-divider">
+	<div class="row featurette">
+	  <div class="col-md-7">
+	    <h2 class="featurette-heading"><span class="text-muted">TITULO 2 PORTFOLIO</span></h2>
+	    <p class="lead">CONTENIDO 2 PORTOFOLIO</p>
+	    </span>
+	  </div>
+	</div>
+	<hr class="featurette-divider">
+	</div>
 {% endblock %}
