--- a/AppCore/templates/AppCore/BarraNavegacion.html
+++ b/AppCore/templates/AppCore/BarraNavegacion.html
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
         
-      <li class="nav-item">
+      <li class="nav-item {% if request.path|slice:":6" == '/blog/' %}active{% endif %}">
         <a class="nav-link" href="{% url 'name-blog' %}">Blog</a>  
       </li>
       <li class="nav-item {% if request.path == '/about-me/' %}active{% endif %}" >
