--- a/AppBlog/templates/AppBlog/Blog.html
+++ b/AppBlog/templates/AppBlog/Blog.html
@@ -1,18 +1,20 @@
 {% extends 'AppCore/Base.html' %}
 {% load static %}
 {% block NombrePestania %}
-BLOG
+{{clave_cabecera_template}}
 {% endblock %}
 
+
 {% block contenido %}
-  {% for post in posts %}
+{% include 'AppBlog/CrearEntrada.html' %}
+  {% for post in clave_posts_template %}
 	<div class="container marketing">
 	<hr class="featurette-divider">
 	<div class="row featurette">
 	  <div class="col-md-7">
 	  	<span class="section-heading-upper">{{post.published|date:"SHORT_DATE_FORMAT"}}</span>
 	    <h2 class="featurette-heading"><span class="text-muted">{{post.title}}</span></h2>
-	    <p class="lead">{{post.content|linebreaks}}</p>
+	    <p class="lead">{{post.content|safe}}</p>
 	    <span class="section-heading-under">Publicado por<em><b> {{post.author}} </b></em> en 
 		    {% for category in post.categories.all %}
 		    <a href="{% url 'name-categoria' category.id %}" class="link">{{category.name}}</a>
