--- a/AppCore/static/AppCore/css/carousel.css
+++ b/AppCore/static/AppCore/css/carousel.css
@@ -89,3 +89,10 @@ body {
     margin-top: 7rem;
   }
 }
+
+/* CKEDITOR
+-------------------------------------------------- */
+.django-ckeditor-widget, .cke_editor_id_content {
+    width: 100% !important;
+    max-width: 821px !important;
+}
