--- a/AppCore/templates/AppCore/BarraNavegacion.html
+++ b/AppCore/templates/AppCore/BarraNavegacion.html
@@ -1,31 +1,50 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="{% url 'name-home' %}">Inicio</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav mr-auto">
-        
-      <li class="nav-item {% if request.path|slice:":6" == '/blog/' %}active{% endif %}">
-        <a class="nav-link" href="{% url 'name-blog' %}">Blog</a>  
-      </li>
-      <li class="nav-item {% if request.path == '/about-me/' %}active{% endif %}" >
-        <a class="nav-link" href="{% url 'name-about' %}">Acerca de nosotros</a>
-      </li>
-      <li class="nav-item {% if request.path == '/portfolio/' %}active{% endif %}">
-        <a class="nav-link" href="{% url 'name-portfolio' %}">Portfolio</a>
-      </li> 
-      <li class="nav-item {% if request.path == '/contact/' %}active{% endif %}">
-        <a class="nav-link" href="{% url 'name-contact' %}">Contacto</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="http://www.unavarra.es/">UPNA</a>
-      </li>
-      
-    </ul>
-    <form class="form-inline mt-2 mt-md-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<!-- Navegación -->
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="{% url 'name-home' %}">Inicio</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ned" aria-controls="ned" aria-expanded="false">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="ned">
+      <ul class="navbar-nav mr-auto">
+     	<li class="nav-item {% if request.path|slice:":6" == '/blog/' %}active{% endif %}">
+          <a class="nav-link" href="{% url 'name-blog' %}">Blog</a>
+        </li>    
+      	<li class="nav-item {% if request.path == '/about-me/' %}active{% endif %}" >
+          <a class="nav-link" href="{% url 'name-about' %}">Acerca de nosotros</a>
+        </li>
+		<li class="nav-item {% if request.path == '/portfolio/' %}active{% endif %}">
+		  <a class="nav-link" href="{% url 'name-portfolio' %}">Portfolio</a>
+		</li> 
+		<li class="nav-item {% if request.path == '/contact/' %}active{% endif %}">
+		  <a class="nav-link" href="{% url 'name-contact' %}">Contacto</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="http://www.unavarra.es/">UPNA</a>
+		</li>
+      </ul>
+      <ul class="navbar-nav">
+        {% if not request.user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="#">Acceder</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">Registro</a>
+            </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="#">Mensajes</a>
+        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Perfil</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Salir</a>
+          </li>
+        {% endif %}
+      </ul>
+    </div>
   </div>
 </nav>
