--- a/AppCore/templates/AppCore/Home.html
+++ b/AppCore/templates/AppCore/Home.html
@@ -1,7 +1,7 @@
 {% extends "AppCore/Base.html" %}
 {% load static %}
 {% block NombrePestania %}
-Inicio
+{{clave_nombre_pestania}}
 {% endblock %}
 
 {% block contenido %}
