--- a/AppBlog/templates/AppBlog/BarraCrearEntradaBlog.html
+++ b/AppBlog/templates/AppBlog/BarraCrearEntradaBlog.html
@@ -2,20 +2,18 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <span class="navbar-brand" href="#"><i>Administrar</i></span>
+    <a class="navbar-brand" href="/admin/">Administrador</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nep" aria-controls="nep" aria-expanded="false">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="nep">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#"><i>Crear entrada al blog</i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'name-blog' %}"><i>Listar entradas del blog</i></a>
+          <a class="nav-link" href="{% url 'name-crearEntrada' %}"><i>Crear entrada al blog</i></a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 {% endif %}
+
