--- a/AppCore/templates/AppCore/About.html
+++ b/AppCore/templates/AppCore/About.html
@@ -1,7 +1,7 @@
 {% extends 'AppCore/Base.html' %}
 
 {% block NombrePestania %}
-{{clave_cabecera_template}}
+{{clave_nombre_pestania}}
 {% endblock %}
 
 
