--- a/AppContacto/templates/AppContacto/Contact.html
+++ b/AppContacto/templates/AppContacto/Contact.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% load static %}
 {% block NombrePestania %}
-CONTACTO
+Contacto
 {% endblock %}
 
 {% block contenido %}
