--- a/AppCore/templates/AppCore/BarraNavegacion.html
+++ b/AppCore/templates/AppCore/BarraNavegacion.html
@@ -1,50 +1,55 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <!-- Navegación -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
-  <div class="container">
-    <a class="navbar-brand" href="{% url 'name-home' %}">Inicio</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ned" aria-controls="ned" aria-expanded="false">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="ned">
-      <ul class="navbar-nav mr-auto">
-     	<li class="nav-item {% if request.path|slice:":6" == '/blog/' %}active{% endif %}">
-          <a class="nav-link" href="{% url 'name-blog' %}">Blog</a>
-        </li>    
-      	<li class="nav-item {% if request.path == '/about-me/' %}active{% endif %}" >
-          <a class="nav-link" href="{% url 'name-about' %}">Acerca de nosotros</a>
-        </li>
-		<li class="nav-item {% if request.path == '/portfolio/' %}active{% endif %}">
-		  <a class="nav-link" href="{% url 'name-portfolio' %}">Portfolio</a>
-		</li> 
-		<li class="nav-item {% if request.path == '/contact/' %}active{% endif %}">
-		  <a class="nav-link" href="{% url 'name-contact' %}">Contacto</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="http://www.unavarra.es/">UPNA</a>
-		</li>
-      </ul>
-      <ul class="navbar-nav">
-        {% if not request.user.is_authenticated %}
-          <li class="nav-item">
-            <a class="nav-link" href="#">Acceder</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="#">Registro</a>
-            </li>
+    <header>
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        {% if user.is_authenticated %}
+        <a class="navbar-brand" href="{% url 'name-home' %}">Usuario: {{user.get_username}}</a>
         {% else %}
-        <li class="nav-item">
-          <a class="nav-link" href="#">Mensajes</a>
-        </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Perfil</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Salir</a>
-          </li>
+        <a class="navbar-brand" href="{% url 'name-home' %}">Página UPNA</a>
         {% endif %}
-      </ul>
-    </div>
-  </div>
-</nav>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav mr-auto">
+			<li class="nav-item {% if request.path|slice:":6" == '/blog/' %}active{% endif %}">
+			  <a class="nav-link" href="{% url 'name-blog' %}">Blog</a>
+			</li>    
+			<li class="nav-item {% if request.path == '/about-us/' %}active{% endif %}" >
+			  <a class="nav-link" href="{% url 'name-about' %}">Acerca de nosotros</a>
+			</li>
+			<li class="nav-item {% if request.path == '/portfolio/' %}active{% endif %}">
+			  <a class="nav-link" href="{% url 'name-portfolio' %}">Portfolio</a>
+			</li> 
+			<li class="nav-item {% if request.path == '/contacto/' %}active{% endif %}">
+			  <a class="nav-link" href="{% url 'name-contact' %}">Contacto</a>
+			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="http://www.unavarra.es/">UPNA</a>
+			</li>
+          </ul>
+		{% if not request.user.is_authenticated %}
+         <form class="form-inline mt-2 mt-md-0" method="POST" action="{% url 'name-login' %}">
+           {% csrf_token %}
+           <input class="form-control mr-sm-2" type="text" placeholder="Usuario" aria-label="Usuario" name="username">
+           <input class="form-control mr-sm-2" type="password" placeholder="Contraseña" aria-label="Contraseña" name="password">
+           <button class="btn btn-default" type="submit">Entrar</button>
+         </form>
+	    {% endif %}
+	    {% if request.user.is_authenticated %}
+      	<ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'name-logout' %}">Salir</a>
+          </li>
+         </ul>
+         {% else %}
+      	<ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'name-signup' %}">Registrte</a>
+          </li>
+         </ul>
+         {% endif %}
+        </div>
+      </nav>
+    </header>
