--- a/AppBlog/templates/AppBlog/Blog.html
+++ b/AppBlog/templates/AppBlog/Blog.html
@@ -36,8 +36,10 @@
 			    </span>
 			    <p></p>
 			    <p></p>
+			    {% ifequal request.user post.author %}
 				<a href="{% url 'name-editarEntrada' post.id %}"><button type="button" class="btn btn-warning btn-sm" >Editar Entreda</button></a>
-				<a href="{% url 'name-borrarEntrada' post.id %}"><button type="button" class="btn btn-danger btn-sm">Borrar Entreda</button></a>	
+				<a href="{% url 'name-borrarEntrada' post.id %}"><button type="button" class="btn btn-danger btn-sm">Borrar Entreda</button></a>
+				{% endifequal %}	
 			    </div>
 		  	
 			   <div class="col-md-5">
