--- a/AppCore/templates/AppCore/BarraNavegacion.html
+++ b/AppCore/templates/AppCore/BarraNavegacion.html
@@ -13,6 +13,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
+            {% if request.user.is_authenticated %}
+          	<li class="nav-item {% if request.path == '/filtros/listado/' %}active{% endif %}">
+			  <a class="nav-link" href="{% url 'name-ListadoFiltros' %}">Filtros</a>
+			</li>
+			 {% endif %}
 			<li class="nav-item {% if request.path|slice:":6" == '/blog/' %}active{% endif %}">
 			  <a class="nav-link" href="{% url 'name-blog' %}">Blog</a>
 			</li>    
