--- a/AppFPBajo/templates/AppFPBajo/Crear_Filtro_Paso_Bajo.html
+++ b/AppFPBajo/templates/AppFPBajo/Crear_Filtro_Paso_Bajo.html
@@ -11,29 +11,41 @@
     <input id="chat-message-submit" type="button" value="Send"/>
 </body>
 <script>
-    var chatSocket = new WebSocket(
-        'ws://' + window.location.host + "/filtros/Crear_FPB/");
+    var chatSocket = new WebSocket('ws://' + window.location.host + "/filtros/Crear_FPB/");
+    
+    <!-- recibe mensaje del backend al frontend  -->
     chatSocket.onmessage = function(e) {
         var data = JSON.parse(e.data);
         var message = data['message'];
         document.querySelector('#chat-log').value += (message + '\n');
     };
+    
+    
+    <!-- socket cerrar -->
     chatSocket.onclose = function(e) {
         console.error('Chat socket closed unexpectedly');
     };
+    
+    
+    
     document.querySelector('#chat-message-input').focus();
     document.querySelector('#chat-message-input').onkeyup = function(e) {
         if (e.keyCode === 13) {  // enter, return
             document.querySelector('#chat-message-submit').click();
         }
     };
+    
+    <!-- envio mensaje del frontend al backend -->
     document.querySelector('#chat-message-submit').onclick = function(e) {
         var messageInputDom = document.querySelector('#chat-message-input');
         var message = messageInputDom.value;
+        console.log(message)
         chatSocket.send(JSON.stringify({
             'message': message
         }));
         messageInputDom.value = '';
     };
+    
+    
 </script>
 </html>
